fixed merge of r111553 from trunk
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_2/madman/Rpacks/bioassayR@111571 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 import(DBI, RSQLite, methods, Matrix, rjson)
 importFrom("XML", xmlTreeParse, xpathSApply, xmlValue, free)
 importFrom("BiocGenerics", organism, "organism<-")
+importClassesFrom("ChemmineR", FPset)
 
 ## EXPORTS
 ## S4 Classes
@@ -43,5 +44,6 @@ export(
     "translateTargetId",
     "assaySetTargets",
     "allCids",
-    "allTargets"
+    "allTargets",
+    "bioactivityFingerprint"
 )
