--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Cross-target analysis of small molecule bioactivity
 Version: 1.43.1
 Date: 2024-10-19
 Author: Tyler Backman, Ronly Schlenk, Thomas Girke
-Maintainer: Daniela Cassol <danicassol@gmail.com>
+Maintainer: Thomas Girke <tgirke@citrus.ucr.edu>
 Depends: R (>= 3.5.0), DBI (>= 0.3.1), RSQLite (>= 1.0.0), methods, Matrix, rjson, BiocGenerics (>= 0.13.8)
 Imports: XML, ChemmineR
 Suggests: BiocStyle, RCurl, biomaRt, cellHTS2, knitr, knitcitations, knitrBootstrap, testthat, ggplot2, rmarkdown
