--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: bioassayR
 Type: Package
 Title: Cross-target analysis of small molecule bioactivity
-Version: 1.43.1
-Date: 2024-10-19
+Version: 1.43.2
+Date: 2024-10-21
 Author: Tyler Backman, Ronly Schlenk, Thomas Girke
 Maintainer: Thomas Girke <tgirke@citrus.ucr.edu>
 Depends: R (>= 3.5.0), DBI (>= 0.3.1), RSQLite (>= 1.0.0), methods, Matrix, rjson, BiocGenerics (>= 0.13.8)
 Imports: XML, ChemmineR
-Suggests: BiocStyle, RCurl, biomaRt, cellHTS2, knitr, knitcitations, knitrBootstrap, testthat, ggplot2, rmarkdown
+Suggests: BiocStyle, RCurl, biomaRt, knitr, knitcitations, knitrBootstrap, testthat, ggplot2, rmarkdown
 Description: bioassayR is a computational tool that enables simultaneous analysis of thousands of bioassay experiments performed over a diverse set of compounds and biological targets. Unique features include support for large-scale cross-target analyses of both public and custom bioassays, generation of high throughput screening fingerprints (HTSFPs), and an optional preloaded database that provides access to a substantial portion of publicly available bioactivity data.
 URL: https://github.com/girke-lab/bioassayR
 BugReports: https://github.com/girke-lab/bioassayR/issues 
